# pme-devops-tech-interview

./: Dockerfile  README.md  pyproject.toml  requirements.txt
devops_tech_interview/: client.py  server.py
