[tool.poetry]
name = "devops-tech-interview"
version = "0.1.0"
description = ""
authors = ["Kavin Autar <kautar@promed.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
httpx = "^0.27.2"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
